Several small performance tweaks